[gd_scene load_steps=12 format=3 uid="uid://f6qkfa41t2cf"]

[ext_resource type="Script" uid="uid://vcndo68snvgg" path="res://Main.gd" id="1"]
[ext_resource type="PackedScene" path="res://Player.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Mob.tscn" id="3"]
[ext_resource type="Script" uid="uid://bqh6ndtkrlj2v" path="res://ScoreLabel.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://c6kxmlol2vbey" path="res://hud.tscn" id="6_3dxm6"]
[ext_resource type="Theme" uid="uid://boi13fc3o8io2" path="res://ui_theme.tres" id="7"]
[ext_resource type="Script" uid="uid://dt87pvqvu8dud" path="res://pausa_menu.gd" id="7_lgr22"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="2"]
size = Vector3(60, 2, 60)

[sub_resource type="CylinderMesh" id="3"]

[sub_resource type="Curve3D" id="5"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 14, 0, -15, 0, 0, 0, 0, 0, 0, -13, 0, -15, 0, 0, 0, 0, 0, 0, -13, 0, 16, 0, 0, 0, 0, 0, 0, 14, 0, 16, 0, 0, 0, 0, 0, 0, 14, 0, -15),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1")
mob_scene = ExtResource("3")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("2")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5, -0.777049, 0.382355, 0, 0.441506, 0.897258, -0.866025, -0.448629, 0.220753, 0, 12.5592, 14.7757)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("2")]
speed = null
jump_impulse = null
bounce_impulse = null
fall_acceleration = null

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0.183514, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, -2.98023e-08, 0, 2.98023e-08, 1, 0, 9.53674e-07, 19)
projection = 1
fov = 48.6
size = 19.0

[node name="Cylinders" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -15)
mesh = SubResource("3")

[node name="MeshInstance3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21, 0, -15)
mesh = SubResource("3")

[node name="MeshInstance2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21, 0, 16)
mesh = SubResource("3")

[node name="MeshInstance4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 16)
mesh = SubResource("3")

[node name="SpawnPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
curve = SubResource("5")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-4.3711353e-08, 0, 0.99999917, 0, 1, 0, -0.99999917, 0, -4.3711353e-08, 14, 0, -15)
rotation_mode = 1
cubic_interp = false
loop = false

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 8.0
offset_top = 7.0
offset_right = 114.000404
offset_bottom = 61.999996
theme_override_colors/font_color = Color(0.2, 0.184314, 0.215686, 1)
text = "Score: 0"
script = ExtResource("6")

[node name="Retry" type="ColorRect" parent="UserInterface"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.447059)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Press Enter to retry"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HUD" parent="." instance=ExtResource("6_3dxm6")]

[node name="PauseMenu" type="CanvasLayer" parent="."]
script = ExtResource("7_lgr22")

[node name="Panel" type="Panel" parent="PauseMenu"]
offset_left = 95.0
offset_top = 109.0
offset_right = 330.0
offset_bottom = 291.0

[node name="Label" type="Label" parent="PauseMenu/Panel"]
layout_mode = 0
offset_left = 93.0
offset_top = 27.0
offset_right = 145.0
offset_bottom = 76.0
text = "PAUSA
"

[node name="ResumeButton" type="Button" parent="PauseMenu/Panel"]
layout_mode = 0
offset_left = 74.0
offset_top = 78.0
offset_right = 169.0
offset_bottom = 109.0
text = "REANUDAR
"

[node name="RestartButton" type="Button" parent="PauseMenu/Panel"]
layout_mode = 0
offset_left = 80.0
offset_top = 131.0
offset_right = 166.0
offset_bottom = 162.0
text = "REINICIAR
"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="pressed" from="PauseMenu/Panel/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/RestartButton" to="." method="_on_restart_button_pressed"]
